Добавлена Swagger/OpenApi документация для cart
